--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ATGC_module</string>
+    <string name="upload_file">Upload File</string>
+    <string name="login">login</string>
 </resources>
