--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ATGC_module</string>
     <string name="upload_file">Upload File</string>
     <string name="login">login</string>
+    <string name="connect_to_server">Connect to Server</string>
 </resources>
